--- a/Cart.html
+++ b/Cart.html
@@ -66,7 +66,7 @@
         </button>
       </div>
     </div>
-    <div id="paymentForm">
+    <div class="paymentForm" id="checkOutForm">
       <div class="paymentForm-container">
         <h2>
           Select your payment method
