--- a/Cart.html
+++ b/Cart.html
@@ -76,6 +76,7 @@
           Paypal
         </button>
         <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+          <i class="fa fa-credit-card" style="color:black;"></i>
           Credit Card
         </button>
         <button class="btn cancel" onclick="checkOutCanceled()">
