--- a/BHS.html
+++ b/BHS.html
@@ -37,7 +37,7 @@
         </nav>
         <hr>
         <br>
-            <div class="pictures" onclick="Increase()">
+            <div class="pictures" onclick="Increase();">
                 <table>
                     <tr>
                         <th>
@@ -73,20 +73,53 @@
                      $15.00
                 </h2>
                 <h3 id="bookAuther">
-                    Gregory Benford & Larry Niven
+                    By: Gregory Benford & Larry Niven
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  A human expedition to colonize another star system is jeopardized by an encounter with an astonishingly immense artifact in 
+                  interstellar space: a bowl-shaped structure cupping a star, with a habitable area equivalent to many millions of Earths. And which, tantalizingly, 
+                  is on a direct path heading toward the same system.
+                  <br>
+                  <br>
+                  Investigating the Bowl, or Shipstar, the human explorers are separated―one group captured by the gigantic structure`s alien inhabitants, the other 
+                  pursued across its strange and dangerous landscape―while the mystery of the Shipstar`s origins and purpose propel the human voyagers toward discoveries 
+                  that transform their understanding of their place in the universe.
+                </p>
                 <div id="payDeliver">
                     <button class="checkOutBtn" onclick="localStorage.setItem('Bowl of Heaven & Shipstar', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
                     </button>
+                    <button class="buy-btn" onclick="checkOutClicked();">
+                      <b>
+                        Buy Now
+                      </b>
+                    </button>
                 </div>
               </div>
             </fieldset>
-              <script src="script.js"></script>
+            <div class="paymentForm" id="checkOutForm">
+              <div class="paymentForm-container">
+                <h2>
+                  Select your payment method
+                </h2>
+                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                  <i class="fa fa-paypal" style="color:blue;"></i>
+                  Paypal
+                </button>
+                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                  <i class="fa fa-credit-card" style="color:black;"></i>
+                  Credit Card
+                </button>
+                <button class="btn cancel" onclick="checkOutCanceled();">
+                  Cancel
+                </button>
+              </div>
+            </div>
+            <script src="cart.js"></script>
+            <script src="script.js"></script>
         <footer>
 
         </footer>
