--- a/BL.html
+++ b/BL.html
@@ -37,7 +37,7 @@
         </nav>
         <hr>
         <br>
-            <div class="pictures" onclick="Increase()">
+            <div class="pictures" onclick="Increase();">
                 <table>
                     <tr>
                         <th>
@@ -65,14 +65,15 @@
                     $20.00
                 </h2>
                 <h3 id="bookAuther">
-                    Cixin Liu
+                    By: Cixin Liu
                 </h3>
                 <hr>
                 <p id="bookDescription">
                   When Chen's parents are incinerated before his eyes by a blast of ball lightning, he devotes his
                   life to cracking the secret of this mysterious natural phenomenon. His search takes him to stormy 
                   mountaintops, an experimental military weapons lab, and an old Soviet science station.
-
+                  <br>
+                  <br>
                   The more he learns, the more he comes to realize that ball lightning is just the tip of an entirely new frontier. 
                   While Chen's quest for answers gives purpose to his lonely life, it also pits him against soldiers and scientists with motives of 
                   their own: a beautiful army major with an obsession with dangerous weaponry, and a physicist who has no place for ethical considerations in his 
@@ -84,10 +85,34 @@
                           Add To Cart
                         </b>
                     </button>
+                    <button class="buy-btn" onclick="checkOutClicked();">
+                      <b>
+                        Buy Now
+                      </b>
+                    </button>
                 </div>
               </div>
             </fieldset>
-              <script src="script.js"></script>
+            <div class="paymentForm" id="checkOutForm">
+              <div class="paymentForm-container">
+                <h2>
+                  Select your payment method
+                </h2>
+                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                  <i class="fa fa-paypal" style="color:blue;"></i>
+                  Paypal
+                </button>
+                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                  <i class="fa fa-credit-card" style="color:black;"></i>
+                  Credit Card
+                </button>
+                <button class="btn cancel" onclick="checkOutCanceled();">
+                  Cancel
+                </button>
+              </div>
+            </div>
+            <script src="cart.js"></script>
+            <script src="script.js"></script>
         <footer>
 
         </footer>
