--- a/ROT.html
+++ b/ROT.html
@@ -37,7 +37,7 @@
         </nav>
         <hr>
         <br>
-            <div class="pictures" onclick="Increase()">
+            <div class="pictures" onclick="Increase();">
                 <table>
                     <tr>
                         <th>
@@ -65,20 +65,54 @@
                     $20.00
                 </h2>
                 <h3 id="bookAuther">
-                    Baoshu
+                    By: Baoshu
                 </h3>
                 <hr>
-                <p id="bookDescription"></p>
+                <p id="bookDescription">
+                  In the midst of an interstellar war, Yun Tianming found himself on the front lines. Riddled with cancer, he chose to end his life, only to find himself 
+                  flash frozen and launched into space where the Trisolaran First Fleet awaited. Captured and tortured beyond endurance for decades, Yun eventually 
+                  succumbed to helping the aliens subjugate humanity in order to save Earth from complete destruction.
+                  <br>
+                  <br>
+                  Granted a healthy clone body by the Trisolarans, Yun has spent his very long life in exile as a traitor to the human race. Nearing the end of his 
+                  existence at last, he suddenly receives another reprieve―and another regeneration. A consciousness calling itself The Spirit has recruited him to 
+                  wage battle against an entity that threatens the existence of the entire universe. But Yun refuses to be a pawn again and makes his own plans to 
+                  save humanity`s future…
+                </p>
                 <div id="payDeliver">
                     <button class="checkOutBtn" onclick="localStorage.setItem('The Redemtion of Time', '1');alert('added to your cart');">
                         <b>
                           Add To Cart
                         </b>
                     </button>
+                    <button class="buy-btn" onclick="checkOutClicked();">
+                      <b>
+                        Buy Now
+                      </b>
+                    </button>
                 </div>
               </div>
             </fieldset>
-              <script src="script.js"></script>
+            <div class="paymentForm" id="checkOutForm">
+              <div class="paymentForm-container">
+                <h2>
+                  Select your payment method
+                </h2>
+                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                  <i class="fa fa-paypal" style="color:blue;"></i>
+                  Paypal
+                </button>
+                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                  <i class="fa fa-credit-card" style="color:black;"></i>
+                  Credit Card
+                </button>
+                <button class="btn cancel" onclick="checkOutCanceled();">
+                  Cancel
+                </button>
+              </div>
+            </div>
+            <script src="cart.js"></script>
+            <script src="script.js"></script>
         <footer>
 
         </footer>
