--- a/TAM.html
+++ b/TAM.html
@@ -67,7 +67,7 @@
                     $25.00
                 </h2>
                 <h3 id="bookAuther">
-                    Chris Hadfield
+                    By: Chris Hadfield
                 </h3>
                 <hr>
                 <p id="bookDescription">
@@ -94,10 +94,34 @@
                           Add To Cart
                         </b>
                     </button>
+                    <button class="buy-btn" onclick="checkOutClicked();">
+                      <b>
+                        Buy Now
+                      </b>
+                    </button>
                 </div>
               </div>
             </fieldset>
-              <script src="script.js"></script>
+            <div class="paymentForm" id="checkOutForm">
+              <div class="paymentForm-container">
+                <h2>
+                  Select your payment method
+                </h2>
+                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                  <i class="fa fa-paypal" style="color:blue;"></i>
+                  Paypal
+                </button>
+                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                  <i class="fa fa-credit-card" style="color:black;"></i>
+                  Credit Card
+                </button>
+                <button class="btn cancel" onclick="checkOutCanceled();">
+                  Cancel
+                </button>
+              </div>
+            </div>
+            <script src="cart.js"></script>
+            <script src="script.js"></script>
         <footer>
 
         </footer>
