--- a/TBP.html
+++ b/TBP.html
@@ -37,7 +37,7 @@
         </nav>
         <hr>
         <br>
-            <div class="pictures" onclick="Increase()">
+            <div class="pictures" onclick="Increase();">
                 <table>
                     <tr>
                         <th>
@@ -68,14 +68,16 @@
                     $50.00
                 </h2>
                 <h3 id="bookAuther">
-                    Cixin Liu
+                    By: Cixin Liu
                 </h3>
                 <hr>
                 <p id="bookDescription">
                   A secret military group sends signals into space in hopes of establishing contact with aliens—and succeeds.
-
+                  <br>
+                  <br>
                   Picking up their signal is an alien civilization on the brink of destruction who now readies to invade Earth.
-
+                  <br>
+                  <br>
                   News of the coming invasion divides humanity like never before. Some want to help the superior beings take over a world they 
                   see as corrupt. Others prepare to fight the invasion at all cost.
                 </p>
@@ -85,10 +87,34 @@
                           Add To Cart
                         </b>
                     </button>
+                    <button class="checkOutBtn" onclick="checkOutClicked();">
+                      <b>
+                        Buy Now
+                      </b>
+                    </button>
                 </div>
               </div>
             </fieldset>
-              <script src="script.js"></script>
+            <div class="paymentForm" id="checkOutForm">
+              <div class="paymentForm-container">
+                <h2>
+                  Select your payment method
+                </h2>
+                <button class="btn" onclick="window.location.href='https://www.paypal.com/ca/digital-wallet/send-receive-money/paypal-me';">
+                  <i class="fa fa-paypal" style="color:blue;"></i>
+                  Paypal
+                </button>
+                <button class="btn" onclick="window.location.href='PaymentOpts.html';">
+                  <i class="fa fa-credit-card" style="color:black;"></i>
+                  Credit Card
+                </button>
+                <button class="btn cancel" onclick="checkOutCanceled();">
+                  Cancel
+                </button>
+              </div>
+            </div>
+            <script src="cart.js"></script>
+            <script src="script.js"></script>
         <footer>
 
         </footer>
