--- a/index.html
+++ b/index.html
@@ -191,25 +191,12 @@
           </b>
         </a>
       </div>
-      <table style="float:left;padding-left:15px;margin-bottom:15px;">
-        <tr>
-          <th>
-            <div id="git">
-              <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" onclick="window.location.href='https://github.com/caleb-sudo';" width="auto" height="50px" class="social">
-            </div>
-          </th>
-          <th>
-            <div id="youtube">
-              <img src="https://www.iconpacks.net/icons/1/free-youtube-icon-123-thumb.png" width="auto" height="50px" class="social">
-            </div>
-          </th>
-          <th>
-            <div id="twitter">
-              <img src="https://freepnglogo.com/images/all_img/1691832278twitter-x-logo-png.png" width="auto" height="50px" class="social">
-            </div>
-          </th>
-        </tr>
-      </table>
+      <span style="float:left;padding-left:15px;margin-bottom:15px;">
+        <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+        <i class="icon fa fa-youtube-play" style="color:red;"></i>
+        <i class="icon fa fa-twitter" style="color:aqua;"></i>
+        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+      </span>
       <br>
       <br>
       <h2>
