--- a/questions.html
+++ b/questions.html
@@ -74,26 +74,11 @@
       </button>
       <div class="content">
         <p>
-          hello world
+          We only accept payments through Paypal, and Credit Cards such as Visa, American Express, Mastercard, Discover, and JCB.
         </p>
       </div>
     </section>
-    <script>
-      var coll = document.getElementsByClassName("collapsible");
-      var i;
-
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function() {
-          this.classList.toggle("active");
-          var content = this.nextElementSibling;
-          if (content.style.display === "block") {
-            content.style.display = "none";
-          } else {
-            content.style.display = "block";
-          }
-        });
-      }
-    </script>
+    <script src="script.js"></script>
     <footer>
       
     </footer>
