--- a/questions.html
+++ b/questions.html
@@ -58,7 +58,7 @@
       </button>
       <div class="content">
         <p>
-          hello world
+          If you Login with your email you should get an email that the books you ordered have been shipped.
         </p>
       </div>
       <button class="collapsible">
