--- a/PaymentOpts.html
+++ b/PaymentOpts.html
@@ -83,7 +83,7 @@
                                     <i class="fa fa-cc-amex" style="color:blue;"></i>
                                     <i class="fa fa-cc-mastercard" style="color:red;"></i>
                                     <i class="fa fa-cc-discover" style="color:orange;"></i>
-                                    <i class="fa fa-cc-jcb" style="color:linear-gradient(to right,#006fff,#ff005e,#29c731);"></i>
+                                    <i class="fa fa-cc-jcb"></i>
                                 </div>
                                 <label for="cname">
                                     Name on Card
