--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
               Books
             </span>
           </b>
+          <span style="float:right;">
+            <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+            <i class="icon fa fa-youtube-play" style="color:red;"></i>
+            <i class="icon fa fa-twitter" style="color:aqua;"></i>
+            <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+          </span>
         </p>
       </div>
     </header>
