--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
               Books
             </span>
           </b>
-          <span style="float:right;">
-            <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
-            <i class="icon fa fa-youtube-play" style="color:red;"></i>
-            <i class="icon fa fa-twitter" style="color:aqua;"></i>
-            <i class="icon fa fa-facebook-square" style="color:blue;"></i>
-          </span>
         </p>
+        <span style="float:left;">
+          <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
+          <i class="icon fa fa-youtube-play" style="color:red;"></i>
+          <i class="icon fa fa-twitter" style="color:aqua;"></i>
+          <i class="icon fa fa-facebook-square" style="color:blue;"></i>
+        </span>
       </div>
     </header>
     <nav class="stick">
@@ -171,38 +171,32 @@
     </table>
     <hr>
     <footer>
-      <div style="text-align:right; padding-right:15px;">
-        <a class="footerLink">
-          <b>
-            Support
-          </b>
-        </a>
-        <br>
-        <a href="contacts.html" class="footerLink">
-          <b>
-            Contacts
-          </b>
-        </a>
-        <br>
-        <a href="security.html" class="footerLink">
-          <b>
-            Security
-          </b>
-        </a>
+      <div style="text-align:center;display:flex;">
+        <ul>
+          <li>
+            <a href="questions.html" class="footerLink">
+              <b>
+                Frequently Asked Questions
+              </b>
+            </a>
+          </li>
+          <li>
+            <a href="contacts.html" class="footerLink">
+              <b>
+                Contacts
+              </b>
+            </a>
+          </li>
+          <li>
+            <a href="security.html" class="footerLink">
+              <b>
+                Security
+              </b>
+            </a>
+          </li>
+        </ul>
+        
       </div>
-      <div style="text-align:center;">
-        <a href="questions.html" class="footerLink">
-          <b>
-            Frequently Asked Questions
-          </b>
-        </a>
-      </div>
-      <span style="float:left;padding-left:15px;margin-bottom:15px;">
-        <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
-        <i class="icon fa fa-youtube-play" style="color:red;"></i>
-        <i class="icon fa fa-twitter" style="color:aqua;"></i>
-        <i class="icon fa fa-facebook-square" style="color:blue;"></i>
-      </span>
       <br>
       <br>
       <h2>
