--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </span>
           </b>
         </h2>
-        <span style="float:left;">
+        <span style="text-align:right;">
           <i class="icon fa fa-github-square" style="color:black;" onclick="window.location.href='https://github.com/caleb-sudo';"></i>
           <i class="icon fa fa-youtube-play" style="color:red;"></i>
           <i class="icon fa fa-twitter" style="color:aqua;"></i>
