--- a/index.html
+++ b/index.html
@@ -171,23 +171,23 @@
     </table>
     <hr>
     <footer>
-      <div style="text-align:center;display:flex;">
-        <ul>
-          <li>
+      <div>
+        <ul style="text-align:center;">
+          <li style="display:flex;">
             <a href="questions.html" class="footerLink">
               <b>
                 Frequently Asked Questions
               </b>
             </a>
           </li>
-          <li>
+          <li style="display:flex;">
             <a href="contacts.html" class="footerLink">
               <b>
                 Contacts
               </b>
             </a>
           </li>
-          <li>
+          <li style="display:flex;">
             <a href="security.html" class="footerLink">
               <b>
                 Security
