--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </table>
     <hr>
     <footer>
-      <div>
+      <div style="margin-left:49%;">
         <ul style="text-align:center;">
           <li style="display:flex;">
             <a href="questions.html" class="footerLink">
